--- a/LaTeX/Reveal-Modifier Cards.tex
+++ b/LaTeX/Reveal-Modifier Cards.tex
@@ -73,7 +73,7 @@
 \node[cardtext, text=blue] at (16,24.7) {
 	{\Huge Spy}
 	\seperatordescription
-	The top of your card says GREEN, but you are actually on Team Red.
+	The top of your card says RED, but you are actually on Team BLUE.
 	\bluewinsection
 };
 
@@ -100,7 +100,7 @@
 \node[cardtext, text=red] at (16,15.8) {
 	{\Huge Spy}
 	\seperatordescription
-	The top of your card says RED, but you are actually on Team Green.
+	The top of your card says BLUE, but you are actually on Team RED.
 	\bluewinsection
 };
 
